--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"3d-force-graph": "^1.71.2",
 		"autoprefixer": "^10.4.14",
 		"axios": "^1.3.4",
+		"canvg": "^4.0.1",
 		"d3": "^7.8.2",
 		"d3-force-3d": "^3.0.5",
 		"d3-sankey": "^0.12.3",
@@ -71,7 +72,7 @@
 		"three": "^0.150.1",
 		"tslib": "^2.5.0",
 		"typescript": "^5.0.2",
-		"vite": "4.1.4",
+		"vite": "^4.2.1",
 		"vitest": "^0.29.3"
 	},
 	"type": "module"
