--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
           ALCHEMY_POLYGON: ${{ secrets.ALCHEMY_POLYGON }}
           ALCHEMY_SOLANA: ${{ secrets.ALCHEMY_SOLANA }}
           ALCHEMY_ARBITRUM: ${{ secrets.ALCHEMY_ARBITRUM }}
-          PUBLIC_DOMAIN: ${{ secrets.PUBLIC_DOMAIN }}
+          PUBLIC_DOMAIN: ${{ env.PUBLIC_DOMAIN }}
         run: npm run build
 
       - name: Run tests
