--- a/package.json
+++ b/package.json
@@ -15,66 +15,67 @@
 		"gen:previews": "playwright test ./src/preview-screenshots.spec.ts && rsync -avq --include='*/' --include='preview.jpg' --exclude='*' ./static/ ./build/"
 	},
 	"devDependencies": {
-		"@0xsequence/multicall": "^0.43.21",
+		"@0xsequence/multicall": "^0.43.26",
 		"@octokit/rest": "^19.0.7",
-		"@playwright/test": "^1.31.2",
+		"@playwright/test": "^1.32.2",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"@rgossiaux/svelte-heroicons": "^0.1.2",
 		"@solana/spl-token": "^0.3.7",
-		"@solana/web3.js": "^1.74.0",
+		"@solana/web3.js": "^1.75.0",
 		"@sveltejs/adapter-static": "^2.0.1",
-		"@sveltejs/kit": "^1.12.0",
-		"@sveltejs/vite-plugin-svelte": "^2.0.3",
+		"@sveltejs/kit": "^1.15.2",
+		"@sveltejs/vite-plugin-svelte": "^2.0.4",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.9",
 		"@types/d3": "^7.4.0",
 		"@types/d3-sankey": "^0.12.1",
 		"@types/glob": "^8.1.0",
-		"@types/lodash": "^4.14.191",
+		"@types/lodash": "^4.14.192",
 		"@types/lodash-es": "^4.17.7",
 		"@types/marked": "^4.0.8",
 		"@types/string-similarity": "^4.0.0",
 		"@types/three": "^0.149.0",
-		"@wagmi/core": "^0.10.2",
+		"@wagmi/core": "^0.10.9",
 		"3d-force-graph": "^1.71.2",
 		"autoprefixer": "^10.4.14",
-		"axios": "^1.3.4",
+		"axios": "^1.3.5",
 		"canvg": "^4.0.1",
-		"d3": "^7.8.2",
+		"d3": "^7.8.4",
 		"d3-force-3d": "^3.0.5",
 		"d3-sankey": "^0.12.3",
 		"d3-scale": "^4.0.2",
 		"ethers": "^5.7.2",
-		"glob": "^9.3.0",
-		"layercake": "^7.3.4",
-		"lightweight-charts": "^4.0.0",
+		"glob": "^9.3.5",
+		"layercake": "^7.3.5",
+		"lightweight-charts": "^4.0.1",
 		"lodash": "^4.17.21",
 		"lodash-es": "^4.17.21",
-		"marked": "^4.2.12",
+		"marked": "^4.3.0",
 		"ngraph.fromjson": "^3.1.0",
 		"ngraph.graph": "^20.0.1",
 		"ngraph.path": "^1.4.0",
 		"ngraph.tojson": "^1.2.0",
 		"postcss": "^8.4.21",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.8.4",
-		"prettier-plugin-svelte": "^2.9.0",
+		"prettier": "^2.8.7",
+		"prettier-plugin-svelte": "^2.10.0",
 		"simple-git": "^3.17.0",
 		"string-similarity": "^4.0.4",
-		"svelte": "^3.57.0",
-		"svelte-check": "^3.1.4",
+		"svelte": "^3.58.0",
+		"svelte-carousel": "^1.0.25",
+		"svelte-check": "^3.2.0",
 		"svelte-inview": "^4.0.0",
-		"svelte-preprocess": "^5.0.1",
+		"svelte-preprocess": "^5.0.3",
 		"svelte-seo": "^1.5.3",
 		"svelte-typewriter": "^3.1.4",
-		"tailwind-merge": "^1.10.0",
-		"tailwindcss": "^3.2.7",
+		"tailwind-merge": "^1.12.0",
+		"tailwindcss": "^3.3.1",
 		"tailwindcss-scoped-groups": "^2.0.0",
 		"three": "^0.150.1",
 		"tslib": "^2.5.0",
-		"typescript": "^5.0.2",
+		"typescript": "^5.0.4",
 		"vite": "^4.2.1",
-		"vitest": "^0.29.3"
+		"vitest": "^0.29.8"
 	},
 	"type": "module"
 }
