--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    timeout-minutes: 90
     steps:
       - uses: actions/checkout@v3
         with:
@@ -51,7 +52,7 @@ jobs:
           ALCHEMY_SOLANA: ${{ secrets.ALCHEMY_SOLANA }}
           ALCHEMY_ARBITRUM: ${{ secrets.ALCHEMY_ARBITRUM }}
           PUBLIC_DOMAIN: ${{ secrets.PUBLIC_DOMAIN }}
-        run: npm run build
+        run: npm run build-silent
 
       - name: Run tests
         run: npm run unit
