--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
-    timeout-minutes: 90
+    runs-on: ubuntu-latest-16-cores
     steps:
       - uses: actions/checkout@v3
         with:
@@ -52,7 +51,7 @@ jobs:
           ALCHEMY_SOLANA: ${{ secrets.ALCHEMY_SOLANA }}
           ALCHEMY_ARBITRUM: ${{ secrets.ALCHEMY_ARBITRUM }}
           PUBLIC_DOMAIN: ${{ secrets.PUBLIC_DOMAIN }}
-        run: npm run build-silent
+        run: npm run build
 
       - name: Run tests
         run: npm run unit
