--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest-4-cores
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
         with:
