--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,9 @@
 name: Deploy to GitHub Pages
 
 on:
-  push:
-    #branches:
-    #- main
+  #push:
+  #branches:
+  #- main
   # schedule:
   # Runs "At minute 0 past hour 5 and 17." (see https://crontab.guru)
   # - cron: "0 5,17 * * *"
