--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,9 @@
 {
-    "recommendations": [
-        "ms-playwright.playwright",
-        "esbenp.prettier-vscode",
-        "svelte.svelte-vscode",
-        "bradlc.vscode-tailwindcss"
-    ]
+	"recommendations": [
+		"ms-playwright.playwright",
+		"esbenp.prettier-vscode",
+		"svelte.svelte-vscode",
+		"bradlc.vscode-tailwindcss",
+		"github.vscode-github-actions"
+	]
 }
